gobmkida/c3/do_trymove
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_trymove/src/engine/board.c:1138:35: error: use of undeclared identifier 'byte_9C689F'
|| 3 - color != ( unsigned __int8)byte_9C689F[pos] && 3 - color != board[pos + 1]) 
                                  ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_trymove/src/obj/1/board.o] Error 1
